adminConsole - Fixed collapsed row not showing ellipsis - Fixed padding issue on rows

--- a/style/sass/adminConsole.scss
+++ b/style/sass/adminConsole.scss
@@ -97,6 +97,7 @@
                 max-width: pxToRem(225);
                 overflow: hidden;
                 white-space: nowrap;
+                padding-left: pxToRem(10); //Maybe remove this
             }
         }
         
@@ -127,6 +128,10 @@
                 width: pxToRem(65);
                 border-right: 2px solid #eaeaea;
                 text-align: center;
+            }
+            
+            td {
+                text-overflow: ellipsis;
             }
         }
         
